fix: removed extra spacing, etc little changes

--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@ body {
    font-weight: 400;
    line-height: 1.5;
    background-color: rgb(193, 189, 214);
-
-
 }
 
 
@@ -55,14 +53,7 @@ background-color: #8b95b4;
 }
 
 
-.nav-link {
-   color: #ffffff;
-   text-decoration: none;
-}
-
-
 .text-header {
-   margin-top: 0px;
    border: 1px solid #000000;
    border-top: 0px;
 }
@@ -78,7 +69,6 @@ background-color: #8b95b4;
 
 
 .text-header__h1 {
-   flex-wrap: wrap;
    flex-grow: 0.85;
    background-color: #436093;
    text-align: center;
@@ -113,7 +103,9 @@ main {
    transition: color 0.5s;
  }
  
+
  .nav-link:hover {
+   text-decoration: underline;
    color: #0c0227;
  }
 
